Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-473

[C++] Fix DecomressionStream::seek to read from right position

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • None
    • C++
    • None

    Description

      If DecomressionStream has called Next() to read some data and it has intermediate state, calling seek() can cause it to read from a wrong position. The fix should clear all states and forces it to read from right position.

      Attachments

        Issue Links

          Activity

            People

              wgtmac Gang Wu
              wgtmac Gang Wu
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 10m
                  10m