ORC-473: [C++] Fix DecomressionStream::seek to read from right position (#370)

If DecomressionStream has called Next() to read some data and it has
intermediate state, calling seek() can cause it to read from a wrong
position. This patch clears all states and forces it to read from right
position.

Fix #370